set(PROJECT_DIR ..)
set(ADAPTER ./Adapter/Resiprocate)
set(VENDOR ./Vendor/resiprocate)

set(WITH_SSL FALSE CACHE BOOL "WITH_SSL=FALSE")
set(USE_POPT FALSE CACHE BOOL "USE_POPT=FALSE")
set(VERSIONED_SONAME FALSE CACHE BOOL "VERSIONED_SONAME=FALSE")
set(USE_IPV6 FALSE CACHE BOOL "USE_IPV6=FALSE")
set(USE_DTLS FALSE CACHE BOOL "USE_DTLS=FALSE")
set(USE_MAXMIND_GEOIP FALSE CACHE BOOL "USE_MAXMIND_GEOIP=FALSE")
set(BUILD_REPRO FALSE CACHE BOOL "BUILD_REPRO=FALSE")
set(BUILD_RETURN FALSE CACHE BOOL "BUILD_RETURN=FALSE")
set(BUILD_REFLOW FALSE CACHE BOOL "BUILD_REFLOW=FALSE")
set(BUILD_REND FALSE CACHE BOOL "BUILD_REND=FALSE")
set(BUILD_TFM FALSE CACHE BOOL "BUILD_TFM=FALSE")
set(BUILD_RECON FALSE CACHE BOOL "BUILD_RECON=FALSE")
set(BUILD_TESTING FALSE CACHE BOOL "BUILD_TESTING=FALSE")

include_directories(${PROJECT_DIR})
include_directories(${VENDOR})

aux_source_directory(${ADAPTER} SRC_ADAPTER)

add_subdirectory(${VENDOR})

add_library(sipadapter STATIC ${SRC_ADAPTER})

install(
	TARGETS sipadapter
	ARCHIVE DESTINATION lib
)

install(
	FILES ./Adapter/SipAdapter.h
	DESTINATION "include"
)